<resources>
    <string name="app_name">PHMS</string>

    <!--Register Activity-->
    <string name="register">Register</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="confirmPasswordHint">Confirm Password</string>
    <string name="btn_forgot_password">Forgot Password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Back</string>

    <string name="forgot_password_msg">Please enter the email Address for us to send your Reset Password Instructions.</string>


    <string name="next">Next</string>

    <!--User Details Activity-->
    <string name="userDetails">User Details</string>
    <string name="fullName">Full Name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="doctorName">Doctor\'s Name</string>
    <array name="genderArray">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </array>
    <array name="weightArray">
        <item>kgs</item>
        <item>lbs</item>
    </array>
    <array name="heightArray">
        <item>cm</item>
        <item>m</item>
        <item>ft</item>
    </array>


    <array name="frequencyArray">
        <item>Hours</item>
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
    </array>

    <array name="frequencyDaysArray">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>

    </array>

    <array name="specializationArray">
        <item>Cardiologist</item>
        <item>Neurologist</item>
        <item>Oncologist</item>
        <item>Radiologist</item>
        <item>Orthologist</item>
        <item>General Practitioner</item>
        <item>Trauma</item>
        <item>Pediatrist</item>
        <item>Gynacologist</item>
        <item>Dermatologist</item>

    </array>

    <!--Drawer Layout-->
    <string name="home">Home</string>
    <string name="profile">Profile</string>

    <!--Vitals Fragment-->
    <string name="vitals">Vitals</string>
    <string name="bloodPressure">Blood Pressure</string>
    <string name="glucose">Glucose Level</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="bpUnit">mmHg</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="glucoseUnit">mg/dL</string>
    <string name="cholesterolUnit">mg</string>
    <string name="None" />

    <!-- Main Screen Card Layout String -->
    <string name="medication">Medications</string>
    <string name="diet">Diet</string>
    <string name="welcome">Welcome to PHMS</string>
    <string name="notes">Notes</string>
    <string name="appointment">Appointments</string>
    <string name="designee">Designee</string>
    <string name="doctor">Doctor</string>
    <string name="filter">Filter</string>
    <string name="category">Category</string>
    <array name="categories">
        <item>Vitals</item>
        <item>Medication</item>
        <item>Appointments</item>
        <item>Notes</item>
    </array>
    <string name="fromDate">From</string>
    <string name="toDate">To</string>

    <!--Medications Fragment -->
    <string name="medicationName">Medication Name</string>
    <string name="medManufacturer">Manufacturer</string>
    <string name="date">Date</string>
    <string name="medDosage">Dosage</string>
    <string name="dosageUnit">mg</string>
    <string name="frequency">Frequency</string>
    <string name="frequencyTime">Frequency</string>
    <string name="frequencyDays">No of Times</string>
    <string name="initialTime">Initial Time</string>
    <string name="startdate">Start Date</string>
    <string name="enddate">End Date</string>
    <string name="totalQuantity">Total Quantity</string>


    <!--Designee Fragment-->
    <string name="dnd">Doctor &amp; Designee</string>
    <string name="phone">Phone</string>
    <string name="designeeName">Designee\'s Name</string>
    <string name="relationship">Relationship</string>

    <!--Appointments Fragment-->
    <string name="doctorInfo">Doctor Information:</string>
    <string name="doctorSpecialization">Doctor Specialization</string>
    <string name="number">Phone Number</string>
    <string name="visitinfo">Visit Information:</string>
    <string name="appointmentdate">Appointment Date</string>
    <string name="appointmenttime">Appointment Time</string>
    <string name="purpose">Purpose</string>
    <string name="prescriptionhint">Prescription/Outcomes/Results</string>
    <string name="prescription">Prescription</string>

    <!-- Diet Fragment -->
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snacks">Snacks</string>
    <string name="totalcals">Total Calories for the day:</string>
    <string name="addfood">Add Food</string>
    <string name="brandname">Brand Name</string>
    <string name="fooddescription">Food Description</string>
    <string name="servingsize">Serving Size</string>
    <string name="calories">Calories</string>
    <string name="cancel">Cancel</string>
    <string name="zerocal">0 cal</string>


    <!-- Medication Notification -->
    <string name="messagefromphms">Message From PHMS</string>
    <string name="message">It is now time to taken the medicine. Please take your medication on time to avoid complications.</string>
    <string name="snooze"> Snooze </string>
    <string name="dismiss"> Dismiss </string>
    <string name="takemedication">Take Medication </string>
    <string name="keyword">Keyword</string>
    <string name="food_name">Food Name</string>


</resources>
