<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/foodDescriptionInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/foodDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fooddescription"
            android:inputType="text"
            android:maxLines="1"
            tools:ignore="MissingPrefix" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/brandNameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/brandNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/brandname"
            android:inputType="text"
            android:maxLines="1"

            tools:ignore="MissingPrefix" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/servingSizeInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/servingSizeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/servingsize"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            tools:ignore="MissingPrefix" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/caloriesInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/caloriesEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/calories"
            android:inputType="number"
            android:maxLength="4"
            android:maxLines="1"
            tools:ignore="MissingPrefix" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:orientation="horizontal">


        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/addFoodButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addfood" />

    </LinearLayout>


</LinearLayout>