<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ls="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/medication"
        app:titleTextColor="@android:color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/medication_key"
        android:gravity="start"
        android:text=""
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.satsuware.usefulviews.LabelledSpinner
            android:id="@+id/medicationNameSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ls:labelText="@string/medicationName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/medicationDosageInputText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/medicationDosageEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/medDosage"
                android:inputType="number"
                android:maxLength="4"
                tools:ignore="MissingPrefix" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.3"
            android:text="@string/dosageUnit" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/initialTimeEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:hint="@string/initialTime"
                android:inputType="date"
                tools:ignore="MissingPrefix" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/startDateEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:hint="@string/startdate"
                android:inputType="date"
                tools:ignore="MissingPrefix" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/endDateEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:hint="@string/enddate"
                android:inputType="date"
                tools:ignore="MissingPrefix" />

        </LinearLayout>

    </LinearLayout>


        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/frequencyDaysEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/frequencyTime"/>

            <com.satsuware.usefulviews.LabelledSpinner
            android:id="@+id/frequencySpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            ls:labelText="@string/frequencyTime" />

    </LinearLayout>



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@mipmap/ic_done_white_24dp"
        android:translationZ="12dp"
        app:fabSize="normal" />

</LinearLayout>